# game_engine

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/models/Sphynx/: Sphynx.mtl
assets/scenes/: demo_scene
assets/shaders/: light.frag  light.vert  light_cube.frag  light_cube.vert
lib/macos/: SDL2-2.0.22.dmg
src/: .hppader.h  camera.hpp  game.hpp  main.cpp  mesh.hpp  model.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  window.hpp  world.hpp
